Fixed paragraph spacing issues inside the description section of the deal details scene.
Made the blockquotes look better for the reviews in the description section as well.

--- a/grpn/stylesheets/grpn.css
+++ b/grpn/stylesheets/grpn.css
@@ -25,3 +25,21 @@
 .dealListIcon {
     background: url(../images/list-view-header-icon.png) left center no-repeat;
 }
+
+p {
+    padding-top: 0px;
+    padding-bottom: 5px;
+}
+
+blockquote > ul {
+    font-style: italic;
+    margin-left: 0px;
+    padding-left: 3px;
+    list-style-type: none;
+}
+
+blockquote > ul > li {
+    border-left: 2px solid #76A045;
+    padding-left: 3px;
+    margin-bottom: 10px;
+}
